--- a/.gitignore
+++ b/.gitignore
@@ -165,3 +165,13 @@ cython_debug/
 .gitignore
 
 .Rhistory
+
+# OS generated files #
+######################
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
